[package]
name = "mtime"
version = "0.1.0"
authors = ["lafolle <fghjklp@gmail.com>"]
edition = "2018"
description = "Rust port of multitime with custom changes."
homepage = "https://github.com/lafolle/mtime"
repository = "https://github.com/lafolle/mtime" 
readme = "README.md"
license = "MIT"
keywords = ["time", "multitime"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
rand = "0.7.3"
libc = "0.2.76"
prettytable-rs = "0.8.0"
